<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaveTheChildren</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_student_entry">New Entry</string>
    <string name="roster">Roster</string>
    <string name="student_name">Student Name</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="teacher_notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="add">Add Module For Training</string>
    <string name="training_subjects">Select Subject</string>
    <string name="training_grades">Select Grade Level</string>
    <string name="training_modules">Select Module</string>
    <string name ="insert_name"> Please Add Your Name:</string>
    <string name="submit_tutor_info_button"> Submit Information </string>
    <string name="TNA">TNA</string>
    <string name="TNA_tutors">TNA Tutors</string>
    <string name="clear_training">Complete and Clear Training</string>
    <string name="add_more_training"> Modules For Training:</string>
    <string name="button1"> New Tutor </string>
    <string name="button2"> Teacher Roster </string>
    <string name="button3"> TNA </string>
    <color name="grey">#454445</color>
    <color name="button">#2B2B2B</color>
    <color name="button_text">#FFFFFF</color>
</resources>

