<<<<<<< HEAD
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >

    <item android:id="@+id/new_entry"
        android:title="@string/new_student_entry"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/roster"
        android:title="@string/roster"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/tutor"
        android:title="Tutor"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

</menu>
=======
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
>>>>>>> f3fd2d197cb8ecf5099c923c6a0b73a36c0725c3
