<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button

        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/button1"
        android:text="@string/button1"
        android:background="@color/button"
        android:textColor="@color/button_text"
        android:layout_marginRight="1dip"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_toRightOf="@id/button1"
        android:text="@string/button2"
        android:background="@color/button"
        android:textColor="@color/button_text"
        android:layout_marginRight="1dip"/>
    <Button
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/button3"
        android:layout_toRightOf="@id/button2"
        android:text="@string/button3"
        android:background="@color/button"
        android:textColor="@color/button_text"
        android:layout_marginRight="1dip"/>
</LinearLayout>