<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_notes"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/teacher_notes"
        android:inputType="textMultiLine" />

    <TimePicker
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"/>

    <DatePicker
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:layout_below="@+id/datePicker"/>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_tutor_frame_container"></FrameLayout>

</LinearLayout>

</ScrollView>